--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/monitor
+    url: jdbc:mysql://47.114.81.63:3306/monitor
     username: monitor
     password: 123456
   servlet:
@@ -19,3 +19,8 @@ mybatis:
 pagehelper:
   helperDialect: mysql
   supportMethodsArguments: true
+jwt:
+  header: "Authorization"
+  tokenPrefix: ""
+  secret: "qwertyuiop7418520"
+  expireTime: 10080
