--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,15 @@
 server:
-  port: 8080
+  port: 443
+  ssl:
+    key-store: classpath:8175275_www.dpmonitor.top.pfx
+    key-store-password: 0HP7A3ss
+    key-store-type: PKCS12
+    enabled: true
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://47.114.81.63:3306/monitor
+    url: jdbc:mysql://47.114.81.63:3306/monitor?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone =Asia/Shanghai
     username: monitor
     password: 123456
   servlet:
@@ -24,3 +29,4 @@ jwt:
   tokenPrefix: ""
   secret: "qwertyuiop7418520"
   expireTime: 10080
+
